kubernetes/core.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-shoperal-core
spec:
  selector:
    app: shoperal-core
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-postgre-sql
spec:
  type: ClusterIP
  selector:
    database: postgres
  ports:
  - port: 5432
    targetPort: 5432
